Tue Jan  4 10:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/FloatSeq.pidl:
          Updated regeneration instructions

        * tao/IIOP_Acceptor.cpp:
          Updated debug message to get the same format as used on other
          places

        * tao/Invocation_Endpoint_Selectors.{h,cpp,i}:
        * tao/LF_Invocation_Event.{h,cpp,inl}:
        * tao/LF_Strategy.{h,cpp,inl}:
        * tao/Object_Loader.{h,cpp,i}:
        * tao/Pluggable_Messaging.{h,cpp,i}:
        * tao/Sync_Strategies.{h,cpp,i}:
        * tao/Thread_Lane_Resources_Manager.{h,cpp,i}:
          Removed the empty .i/.inl file and updated the cpp and h file to not
          include it anymore

        * tao/LF_CH_Event.h:
          This file included LF_Invocation_Event.inl which is totally wrong, so
          zapped the include

        * tao/Managed_Types.h:
          Fixed typo in documentation

        * tao/Pluggable_Messaging_Utils.h:
          Converted documentation to doxygen style

        * tao/Policy_Set.h:
        * tao/Pseudo_VarOut_T.h:
          Removed commented out code

        * tao/PolicyFactory_Registry.h:
          Small doxygen improvement

        * tao/Profile.cpp:
          Replaced ACE cast macros with their C++ versions

        * tao/TSS_Resources.h:
          Added include to TAO_Export.h, the export macro is used, so we need
          to do this include

        * tao/Makefile.am:
          Updated for changes above

        * tao/BiDir_GIOP/BiDir_ORBInitializer.h:
        * tao/BiDir_GIOP/BiDir_Policy_i.h:
        * tao/BiDir_GIOP/BiDir_PolicyFactory.h:
        * tao/RTCORBA/RT_ORB.h:
        * tao/RTCORBA/RT_Mutex.h:
        * tao/RTCORBA/RT_Current.h:
        * tao/RTCORBA/RT_PolicyFactory.h:
        * tao/RTCORBA/RT_ORBInitializer.h:
        * tao/RTCORBA/RT_Policy_i.h:
          Removed checks for _MSC_VER >= 1200, just check for _MSC_VER

Tue Jan  4 09:42:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
