@@ -27,10 +27,12 @@
 
 #include "WCharSeqC.h"
 #include "tao/Typecode.h"
+#include "tao/CDR.h"
+#include "tao/Any.h"
 #include "tao/Any_Dual_Impl_T.h"
 
 // TAO_IDL - Generated from
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_typecode/typecode_defn.cpp:290
+// be\be_visitor_typecode/typecode_defn.cpp:295
 
 static const CORBA::Long _oc_CORBA_WCharSeq[] =
 {
@@ -62,7 +64,7 @@ static CORBA::TypeCode _tc_TAO_tc_CORBA_WCharSeq (
     sizeof (_oc_CORBA_WCharSeq),
     (char *) &_oc_CORBA_WCharSeq,
     0,
-    sizeof (CORBA::WCharSeq)
+    0
   );
 
 namespace CORBA
@@ -72,7 +74,7 @@ namespace CORBA
 }
 
 // TAO_IDL - Generated from 
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_sequence/any_op_cs.cpp:54
+// be\be_visitor_sequence/any_op_cs.cpp:54
 
 // Copying insertion.
 void operator<<= (
@@ -129,8 +131,6 @@ CORBA::Boolean operator>>= (
       );
 }
 
-
-
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
 
   template class
@@ -145,5 +145,4 @@ CORBA::Boolean operator>>= (
         CORBA::WCharSeq \
       >
 
-#endif /* !ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
-
+#endif /* !ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */ 
