@@ -26,12 +26,11 @@
 //     http://www.cs.wustl.edu/~schmidt/TAO.html
 
 // TAO_IDL - Generated from
-// .\be\be_codegen.cpp:303
+// be\be_codegen.cpp:302
 
 
 #include "WStringSeqC.h"
 #include "tao/CDR.h"
-#include "tao/Typecode.h"
 
 #if defined (__BORLANDC__)
 #pragma option -w-rvl -w-rch -w-ccc -w-aus -w-sig
@@ -39,10 +38,10 @@
 
 #if !defined (__ACE_INLINE__)
 #include "WStringSeqC.inl"
-#endif /* !defined __ACE_INLINE__ */
+#endif /* !defined INLINE */
 
 // TAO_IDL - Generated from
-// .\be\be_visitor_arg_traits.cpp:64
+// be\be_visitor_arg_traits.cpp:65
 
 // Arg traits specializations.
 namespace TAO
@@ -51,7 +50,7 @@ namespace TAO
 
 
 // TAO_IDL - Generated from 
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_sequence/sequence_cs.cpp:65
+// be\be_visitor_sequence/sequence_cs.cpp:65
 
 #if !defined (_CORBA_WSTRINGSEQ_CS_)
 #define _CORBA_WSTRINGSEQ_CS_
@@ -98,7 +97,7 @@ void CORBA::WStringSeq::_tao_any_destructor (
 #endif /* end #if !defined */
 
 // TAO_IDL - Generated from
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_sequence/cdr_op_cs.cpp:96
+// be\be_visitor_sequence/cdr_op_cs.cpp:96
 
 #if !defined _TAO_CDR_OP_CORBA_WStringSeq_CPP_
 #define _TAO_CDR_OP_CORBA_WStringSeq_CPP_
@@ -171,7 +170,7 @@ return 0;
 #endif /* _TAO_CDR_OP_CORBA_WStringSeq_CPP_ */
 
 // TAO_IDL - Generated from
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_root/root.cpp:1628
+// be\be_visitor_root/root.cpp:1629
 
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
 
@@ -216,4 +215,3 @@ return 0;
       >
 
 #endif /* !ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */ 
-
